Добавлена пересылка файла в облако и обновление списка при старте окна